fixed CSS z-index

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -112,7 +112,6 @@ p {
 .modal {
   display: block; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
@@ -121,7 +120,6 @@ p {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  z-index: 11;
 }
 
 /* Modal Content */
